<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculadora</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="op_suma">+</string>
    <string name="op_resta">-</string>
    <string name="op_punto">.</string>
    <string name="op_mul">*</string>
    <string name="op_div">/</string>
    <string name="del">del</string>
    <string name="delete">delete</string>
    <string name="igual">=</string>

</resources>
